# json-parser

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: file_example.py  setup.py  stream_example.py  string_example.py
examples/from_string/: string_example.py
jparse/: json_actions.py  jsongrammar.pg  parser.py
