[metadata]
name = json-parser-aedwardg
version = 0.0.1
author = Anthony Garcia
author_email = aedwardg1@gmail.com
license = MIT
description = A fully-featured LR parser for JSON documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aedwardg/json-parser
classifiers = 
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = jparse
python_requires = >=3.6
install_requires = parglare
